# semisplit

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  semisplit.h
